@@ -925,7 +925,7 @@
 ##                   5593 (Magnum Technologies, rebranded Supermicro board)
 ## Product ID = 4 (X7DBR-3, X7DB8, X8DTN, X7SBI-LN4), 43707 (X8DTH, X8DTG, X8DTU, X8DT3-LN4F), 1549 (X8DTU-6+),
 ##              6 (X8DTL, X8DTL-3F), 1541 (X8SIL-F), 1572 (X9SCL, X9SCM), 1551 (X8DTN+-F), 1037 (X8SIE)
-##              1585 (X9SCA-F-O), 43025 (H8DGU-F), 1576 (X9DRi-F)
+##              1585 (X9SCA-F-O), 43025 (H8DGU-F), 1576 (X9DRi-F), 1574 (X9DRI-LN4F+)
 ## Event/Reading Type Code = 70h (OEM)
 ## Sensor Type = C0h (OEM)
 ## Value 0x0000 = "Low"
@@ -936,11 +936,11 @@
 ##
 ## Note: Early Supermicro motherboards used the "Peppercon" Manufacturer ID
 #
-# IPMI_OEM_Value 10876:1572+1576,10437:4,47488:43707+1549+6+1541+1572+1551+1037+1585+43025,5593:6 0x70 0xC0 0x0000 Nominal
-# IPMI_OEM_Value 10876:1572+1576,10437:4,47488:43707+1549+6+1541+1572+1551+1037+1585+43025,5593:6 0x70 0xC0 0x0001 Warning
-# IPMI_OEM_Value 10876:1572+1576,10437:4,47488:43707+1549+6+1541+1572+1551+1037+1585+43025,5593:6 0x70 0xC0 0x0002 Warning
-# IPMI_OEM_Value 10876:1572+1576,10437:4,47488:43707+1549+6+1541+1572+1551+1037+1585+43025,5593:6 0x70 0xC0 0x0004 Critical
-# IPMI_OEM_Value 10876:1572+1576,10437:4,47488:43707+1549+6+1541+1572+1551+1037+1585+43025,5593:6 0x70 0xC0 0x0007 Warning
+# IPMI_OEM_Value 10876:1572+1576+1574,10437:4,47488:43707+1549+6+1541+1572+1551+1037+1585+43025,5593:6 0x70 0xC0 0x0000 Nominal
+# IPMI_OEM_Value 10876:1572+1576+1574,10437:4,47488:43707+1549+6+1541+1572+1551+1037+1585+43025,5593:6 0x70 0xC0 0x0001 Warning
+# IPMI_OEM_Value 10876:1572+1576+1574,10437:4,47488:43707+1549+6+1541+1572+1551+1037+1585+43025,5593:6 0x70 0xC0 0x0002 Warning
+# IPMI_OEM_Value 10876:1572+1576+1574,10437:4,47488:43707+1549+6+1541+1572+1551+1037+1585+43025,5593:6 0x70 0xC0 0x0004 Critical
+# IPMI_OEM_Value 10876:1572+1576+1574,10437:4,47488:43707+1549+6+1541+1572+1551+1037+1585+43025,5593:6 0x70 0xC0 0x0007 Warning
 #
 ##########################################################################################################
 #
