@@ -149,6 +149,7 @@ extern "C" {
  * Supermicro X9SCA-F-O (X9SCA_F_O)
  * Supermicro H8DGU-F (H8DGU_F)
  * Supermicro X9DRi-F (X9DRI_F)
+ * Supermicro X9DRI-LN4F+ (X9DRI_LN4F_PLUS)
  */
 
 /* achu: not official names, named based on use context */
