@@ -194,33 +194,34 @@ extern "C" {
 
 /* Seen in the wild w/ Peppercon IANA number 10437 */
 /* achu: there is no product name pattern here, what gives Supermicro? */
-#define IPMI_SUPERMICRO_PRODUCT_ID_FOUR_BASE   4
-#define IPMI_SUPERMICRO_PRODUCT_ID_X7DBR_3     IPMI_SUPERMICRO_PRODUCT_ID_FOUR_BASE
-#define IPMI_SUPERMICRO_PRODUCT_ID_X7DB8       IPMI_SUPERMICRO_PRODUCT_ID_FOUR_BASE
-#define IPMI_SUPERMICRO_PRODUCT_ID_X8DTN       IPMI_SUPERMICRO_PRODUCT_ID_FOUR_BASE
-#define IPMI_SUPERMICRO_PRODUCT_ID_X7SBI_LN4   IPMI_SUPERMICRO_PRODUCT_ID_FOUR_BASE
+#define IPMI_SUPERMICRO_PRODUCT_ID_FOUR_BASE       4
+#define IPMI_SUPERMICRO_PRODUCT_ID_X7DBR_3         IPMI_SUPERMICRO_PRODUCT_ID_FOUR_BASE
+#define IPMI_SUPERMICRO_PRODUCT_ID_X7DB8           IPMI_SUPERMICRO_PRODUCT_ID_FOUR_BASE
+#define IPMI_SUPERMICRO_PRODUCT_ID_X8DTN           IPMI_SUPERMICRO_PRODUCT_ID_FOUR_BASE
+#define IPMI_SUPERMICRO_PRODUCT_ID_X7SBI_LN4       IPMI_SUPERMICRO_PRODUCT_ID_FOUR_BASE
 
 /* Seen in the wild w/ Supermicro workaround IANA number 47488 */
-#define IPMI_SUPERMICRO_PRODUCT_ID_X8DT_BASE   43707
-#define IPMI_SUPERMICRO_PRODUCT_ID_X8DTH       IPMI_SUPERMICRO_PRODUCT_ID_X8DT_BASE
-#define IPMI_SUPERMICRO_PRODUCT_ID_X8DTG       IPMI_SUPERMICRO_PRODUCT_ID_X8DT_BASE
-#define IPMI_SUPERMICRO_PRODUCT_ID_X8DTU       IPMI_SUPERMICRO_PRODUCT_ID_X8DT_BASE
-#define IPMI_SUPERMICRO_PRODUCT_ID_X8DT3_LN4F  IPMI_SUPERMICRO_PRODUCT_ID_X8DT_BASE
+#define IPMI_SUPERMICRO_PRODUCT_ID_X8DT_BASE       43707
+#define IPMI_SUPERMICRO_PRODUCT_ID_X8DTH           IPMI_SUPERMICRO_PRODUCT_ID_X8DT_BASE
+#define IPMI_SUPERMICRO_PRODUCT_ID_X8DTG           IPMI_SUPERMICRO_PRODUCT_ID_X8DT_BASE
+#define IPMI_SUPERMICRO_PRODUCT_ID_X8DTU           IPMI_SUPERMICRO_PRODUCT_ID_X8DT_BASE
+#define IPMI_SUPERMICRO_PRODUCT_ID_X8DT3_LN4F      IPMI_SUPERMICRO_PRODUCT_ID_X8DT_BASE
 /* achu: X8DTU-6+, why not same as above?  Not sure, possibly created
  * specifically for vendor or vendor changed for themselves.
  */
-#define IPMI_SUPERMICRO_PRODUCT_ID_X8DTU_6PLUS 1549
-#define IPMI_SUPERMICRO_PRODUCT_ID_X8DTL_BASE     6
-#define IPMI_SUPERMICRO_PRODUCT_ID_X8DTL       IPMI_SUPERMICRO_PRODUCT_ID_X8DTL_BASE
-#define IPMI_SUPERMICRO_PRODUCT_ID_X8DTL_3F    IPMI_SUPERMICRO_PRODUCT_ID_X8DTL_BASE
-#define IPMI_SUPERMICRO_PRODUCT_ID_X8SIL_F     1541
-#define IPMI_SUPERMICRO_PRODUCT_ID_X9SC_BASE   1572
-#define IPMI_SUPERMICRO_PRODUCT_ID_X9SCL       IPMI_SUPERMICRO_PRODUCT_ID_X9SC_BASE
-#define IPMI_SUPERMICRO_PRODUCT_ID_X9SCM       IPMI_SUPERMICRO_PRODUCT_ID_X9SC_BASE
-#define IPMI_SUPERMICRO_PRODUCT_ID_X8DTNPLUS_F 1551
-#define IPMI_SUPERMICRO_PRODUCT_ID_X8SIE       1037
-#define IPMI_SUPERMICRO_PRODUCT_ID_X9SCA_F_O   1585
-#define IPMI_SUPERMICRO_PRODUCT_ID_H8DGU_F     43025
+#define IPMI_SUPERMICRO_PRODUCT_ID_X8DTU_6PLUS     1549
+#define IPMI_SUPERMICRO_PRODUCT_ID_X8DTL_BASE      6
+#define IPMI_SUPERMICRO_PRODUCT_ID_X8DTL           IPMI_SUPERMICRO_PRODUCT_ID_X8DTL_BASE
+#define IPMI_SUPERMICRO_PRODUCT_ID_X8DTL_3F        IPMI_SUPERMICRO_PRODUCT_ID_X8DTL_BASE
+#define IPMI_SUPERMICRO_PRODUCT_ID_X8SIL_F         1541
+#define IPMI_SUPERMICRO_PRODUCT_ID_X9SC_BASE       1572
+#define IPMI_SUPERMICRO_PRODUCT_ID_X9SCL           IPMI_SUPERMICRO_PRODUCT_ID_X9SC_BASE
+#define IPMI_SUPERMICRO_PRODUCT_ID_X9SCM           IPMI_SUPERMICRO_PRODUCT_ID_X9SC_BASE
+#define IPMI_SUPERMICRO_PRODUCT_ID_X8DTNPLUS_F     1551
+#define IPMI_SUPERMICRO_PRODUCT_ID_X8SIE           1037
+#define IPMI_SUPERMICRO_PRODUCT_ID_X9SCA_F_O       1585
+#define IPMI_SUPERMICRO_PRODUCT_ID_H8DGU_F         43025
+#define IPMI_SUPERMICRO_PRODUCT_ID_X9DRI_LN4F_PLUS 1574
 
 /* Seen in the wild w/ proper IANA number 10876 */
 /* defined above: IPMI_SUPERMICRO_PRODUCT_ID_X9SCM */
