@@ -139,6 +139,7 @@ extern "C" {
  * Supermicro X9SCA-F-O (X9SCA-F-O)
  * Supermicro H8DGU-F (H8DGU_F)
  * Supermicro X9DRi-F (X9DRI_F)
+ * Supermicro X9DRI-LN4F+ (X9DRI_LN4F_PLUS)
  */
 /* achu: not official names, named based on use context */
 #define IPMI_SENSOR_TYPE_OEM_SUPERMICRO_CPU_TEMP 0xC0 
